--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
+@import-normalize;
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
