--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  color: #fff;
 }
 ul {
   list-style: none;
@@ -15,63 +16,117 @@ p {
   padding: 0;
 }
 
- .submit-form{
-    margin: 16px auto;
-    width: 256px;
- }
- .submit-form input{
-    margin-right: 4px;
- }
-
- .weather-wrapper{
-    display: flex;
-    justify-content: center;
-    height: 400px;
- }
-
- .current-card-wrapper{
-    width: 250px;
-    height: 300px;
-    /* display: flex; */
-    text-align: center;
-    border: 1px solid black;
-    border-radius: 8px;
- }
-
- .card-info{
-    padding: 12px;
-    text-align: left;
- }
-
- .forecast-list{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    /* gap: 20px; */
-    /* flex-direction: column; */
-    margin: 0 auto;
- }
- .forecast-list-item{
-    width: 100%;
- }
-.forecast-list-item:hover{
-    background: tomato;
+.submit-form {
+  margin: 16px auto;
+  /* width: 256px; */
 }
-.weather-details-general{
-    padding: 8px;
-    width: 200px;
+.submit-form input {
+  margin-right: 4px;
 }
-.weather-detail-hour{
-    margin-top: 12px;
-    display: flex;
-    flex-direction: column;
-    /* gap: 12px; */
-    /* justify-content: space-between; */
+
+.weather-wrapper {
+  display: flex;
+  justify-content: center;
+  height: 400px;
+  background-color: #222831;
+  margin: 0 auto;
+  width: 450px;
+  border-radius: 25px;
 }
-.weather-detail-item{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 12px;
-    
+
+.current-card-wrapper {
+  width: 250px;
+  /* height: 300px; */
+  /* display: flex; */
+  text-align: center;
+  /* border: 1px solid black; */
+  /* border-radius: 8px; */
+  margin-bottom: 4px;
+
+  position: relative;
+  height: 100%;
+  border-radius: 25px;
+  background-image: url("https://images.unsplash.com/photo-1702744473287-4cc284e97206?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80");
+  /* width: 300px; */
+  -webkit-box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
+  -webkit-transition: -webkit-transform 300ms ease;
+  transition: -webkit-transform 300ms ease;
+  -o-transition: transform 300ms ease;
+  transition: transform 300ms ease;
+  transition: transform 300ms ease, -webkit-transform 300ms ease;
+  -webkit-transform: translateZ(0) scale(1.02) perspective(1000px);
+  transform: translateZ(0) scale(1.02) perspective(1000px);
+  float: left;
+}
+.current-card-wrapper:hover {
+  -webkit-transform: scale(1.1) perspective(1500px) rotateY(10deg);
+  transform: scale(1.1) perspective(1500px) rotateY(10deg);
+}
+.card-photo-wrapper {
+  background-image: linear-gradient(135deg, #72edf2 10%, #5151e5 100%);
+  height: 100%;
+  opacity: 0.8;   
+  border-radius: 25px;
+}
+.card-info {
+  padding: 12px;
+  text-align: left;
+}
+.card-info > p {
+  margin-bottom: 8px;
+}
+.forecast-list {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  /* gap: 20px; */
+  /* flex-direction: column; */
+  margin: 0 auto;
+  -webkit-box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+.forecast-list-item {
+  width: 100%;
+  cursor: pointer;
+  -webkit-transition: 200ms ease;
+  -o-transition: 200ms ease;
+  transition: 200ms ease;
+  border-radius: 10px;
+}
+.forecast-list-item:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+  background: #fff;
+  color: #222831;
+  -webkit-box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2);
+}
+.active {
+  background: #fff;
+  color: #222831;
+  border-radius: 10px;
+}
+.weather-detail-list {
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.weather-details-general {
+  padding: 8px;
+  width: 200px;
+}
+.weather-detail-hour {
+  margin-top: 12px;
+  display: flex;
+  flex-direction: column;
+  /* gap: 12px; */
+  /* justify-content: space-between; */
+}
+.weather-detail-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 12px;
 }
