--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,2 @@
 @import-normalize;
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-p {
-  margin: 0;
-  padding: 0;
-}
+@import url(./styles/styles.css);
